cambio de sergio x yoego; en el template content-bio.html

--- a/js/tmps/content-bio.html
+++ b/js/tmps/content-bio.html
@@ -11,7 +11,7 @@
 	<div class="content-home__body__paragrah">
 		<h2 class="title-main">Soy Desarrollador Web / Frontend</h2>
 		<p class="font-content">
-		Hola me llamo Sergio y soy "Web Lover", que significa esto ? podría decir simplemente que soy programador
+		Somos YOEGO-WEB y somos "Web Lover", que significa esto ? podría decir simplemente que soy programador
 		front / backend pero el Desarrollo Web no solo se limita al entendimiento de un lenguaje, al comportamiento de un browser navegador, dispositivo o un entorno de servidor; que son todo 
 		un universo con sus galaxias, versiones y su propio concepto del tiempo.</p>
 		</p>
